--- a/src/app/(auth)/login/login.module.css
+++ b/src/app/(auth)/login/login.module.css
@@ -3,7 +3,7 @@ body {
 }
 
 .pageWrapper {
-  background-image: url("/bg.jpg");
+  background-image: url("/bg.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
